# Implicit-Deep-Learning

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py  tutorial.ipynb  visual_data.ipynb  visualize_data.ipynb
attention_text/: main.py
attention_text/utils/: data.py  model.py  train.py
data/: spiky_data_7.csv
docs/source/: asdf.rst  conf.py  index.rst  installation.rst
docs/source/_static/css/: custom.css
docs/source/api/: attention.rst  examples.rst  idl.rst  models.rst  rnn.rst  sim.rst
docs/source/api/solvers/: admm.rst  cvx.rst  gd.rst  ls.rst  solver.rst
examples/idl/: idl.sh  load_data.py  main.py
examples/idl_attention/: idl_attention.sh  main.py  train.py
examples/idl_rnn/: idl_rnn.sh  main.py  netflix_stock.py
examples/im/: load_data.py  main.py  utils.py
examples/im_attention/: data.py  main.py  model.py  train.py  utils.py
examples/im_attention/utils/: model.py  train.py
examples/im_attention_2/: main.py  model.py  train.py  utils.py
examples/im_attention_sub/: main.py
examples/im_attention_sub/utils/: data.py
examples/im_attention_test/: main.py  model.py  utils.py
examples/im_rnn/: load_data.py  main.py  netflix_stock.py  spiky_data.py  utils.py
examples/sim/: example.py  explicit_networks.py  train_explicit.py  train_sim.py
idl/: implicit_base_model.py  implicit_function.py  implicit_rnn_model.py
idl/attention/: IDLHead.py  ImplicitAttention.py  implicit_head.py  utils.py
implicit/: cifar_test.py  im_test.ipynb  implicit_model.py
implicit-zoo/IM/: main.py  utils.py
scripts/: 1.sh  im.sh  im_attention.sh  im_attention_2.sh  im_attention_test.sh  im_rnn.sh
sim/: sim.py  utils.py
sim/solvers/: __init__.py  admm_single_gpu.py
src/idl/: __init__.py  implicit_base_model.py  implicit_function.py  implicit_rnn_model.py
src/idl/attention/: __init__.py
src/idl/sim/: __init__.py  sim.py
src/idl/sim/solvers/: __init__.py  admm_consensus.py  admm_consensus_multigpu.py  admm_constraint_consensus.py  cvx.py  least_square.py  lowrank.py  mosek.py  projected_gd_lowrank.py  solver.py  state_matching.py
utils/: model.py  train.py
