[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idl"]

[project]
name = "idl"
readme = "README.md"
license = { file = "LICENSE" }
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "torch<=2.6",
    "scipy>=1.10.0",
    "cvxpy>=1.3.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "mosek>=9.5.0",
    "tqdm>=4.66.0",
    "sphinx>=7.0.0",
]

authors = [
    { name = "Hoang Phan", email = "21hoang.p@vinuni.edu.vn" },
    { name = "Bao Tran", email = "21bao.tq@vinuni.edu.vn" },
    { name = "Chi Nguyen", email = "22chi.nh@vinuni.edu.vn" },
    { name = "Bao Truong", email = "21bao.tg@vinuni.edu.vn" },
    { name = "Thanh Tran", email = "21thanh.tq@vinuni.edu.vn" },
    { name = "Khai Nguyen", email = "khai.nx@vinuni.edu.vn" },
    { name = "Hong Chu", email = "hong.ctm@vinuni.edu.vn" },
    { name = "Laurent El Ghaoui", email = "laurent.eg@vinuni.edu.vn" },
]
maintainers = [
    { name = "Hoang Phan", email = "21hoang.p@vinuni.edu.vn" },
    { name = "Bao Tran", email = "21bao.tq@vinuni.edu.vn" },
]
description = "Official package of Implicit Deep Learning and State-driven Implicit Models"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
]

[project.urls]
Homepage = ""
Documentation = ""
Repository = "https://github.com/HoangP8/Implicit-Deep-Learning"
Issues = "https://github.com/HoangP8/Implicit-Deep-Learning/issues"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinxawesome-theme",
]